src/objects/Product_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Child_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Hierarchy (Child Product)</relationshipLabel>
        <relationshipName>Product_Hierarchy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExcludedVersions__c</fullName>
        <label>Excluded Versions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keep_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LicenseInheritanceType__c</fullName>
        <label>License Inheritance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named User Only</fullName>
                </value>
                <value>
                    <fullName>First Level Only</fullName>
                </value>
                <value>
                    <fullName>Do Not Propagate</fullName>
                </value>
                <value>
                    <fullName>If Purchased Only</fullName>
                </value>
                <value>
                    <fullName>Enhanced Translation Only</fullName>
                </value>
                <value>
                    <fullName>If Purchased Only Match Base Servers</fullName>
                </value>
                <value>
                    <fullName>Match Base Feature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Hierarchy</relationshipLabel>
        <relationshipName>Product_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Translation_Inheritance_Type__c</fullName>
        <description>Translation Inheritance Type</description>
        <label>Translation Inheritance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decrease Count on Translation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>insertOnTranslation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used solely for the DSI translation to 2019 products. Determines if the product hierarchy child object should be inserted or used purely for recursion.</description>
        <label>Is Inserted On Translation?</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PB-{000000}</displayFormat>
        <label>Product Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Hierarchy</pluralLabel>
    <recordTypes>
        <fullName>Downgrade</fullName>
        <active>true</active>
        <label>Downgrade</label>
    </recordTypes>
    <recordTypes>
        <fullName>Upgrade</fullName>
        <active>true</active>
        <label>Upgrade</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>